--- a/search/style.css
+++ b/search/style.css
@@ -81,7 +81,7 @@ body{
     -o-transform: translate(200%, 200%);
 }
 
-form{
+.search-container{
     display: flex;
     align-items: center;
     margin: 2.5vh auto;
@@ -97,11 +97,11 @@ form{
     padding: 0 1em;
 }
 
-form:hover{
+.search-container:hover{
     box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.01), 0px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
-form:focus {
+.search-container:focus{
     color: #4b515d;
     box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.01), 0px 0px 8px rgba(0, 0, 0, 0.2);
 }
@@ -119,15 +119,14 @@ input{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
     margin: 2.9vh 0;
 }
 
 .button > input{
-    display: flex;
+    display:flex;
     align-items: center;
     justify-content: center;
-    width: 9%;
+    width: auto;
     height: 4vh;
     border: none;
     background-color: #f7f7f7c5;
@@ -253,12 +252,16 @@ input{
     }
 
     form{
+        width:auto;
+    }
+
+    .search-container{
         width: 85vw;
         height: 2.5em;
         margin: 0 auto;
     }
 
-    form > input{
+    .search-container > input{
         width: 100%;
         font-size: .8em;
     }
@@ -596,6 +599,10 @@ input{
     }
 
     @media screen and (max-width: 1050px){
+        body{
+            overflow-x: hidden;
+        }
+
         .advanced-top-nav{
             font-size: .8em;
         }
